Enable dynamic agent loading
Signed-off-by: Olivier Perrin <olivier.perrin@rte-france.com>