@@ -67,9 +67,21 @@
             ../../distribution/target/site/jacoco-aggregate/jacoco.xml
         </sonar.coverage.jacoco.xmlReportPaths>
         <argLine/> <!--  This is required for later correct replacement of argline -->
+        <!-- Other variables -->
+        <enable-dynamic-agent-loading.argLine/>
     </properties>
 
     <profiles>
+        <profile>
+            <id>java21+</id>
+            <activation>
+                <jdk>[21,)</jdk>
+            </activation>
+            <properties>
+                <!-- In Java 21+, we have to add a parameter to allow dynamic agent loading (cf. powsybl-parent) -->
+                <enable-dynamic-agent-loading.argLine>-XX:+EnableDynamicAgentLoading</enable-dynamic-agent-loading.argLine>
+            </properties>
+        </profile>
         <profile>
             <id>release</id>
             <activation>
@@ -112,7 +124,7 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <!-- Argument added to set the default locale as en_US for unit tests run to be independent of the JVM locale -->
-                            <argLine>@{argLine} -Duser.language=en -Duser.region=US</argLine>
+                            <argLine>@{argLine} -Duser.language=en -Duser.region=US ${enable-dynamic-agent-loading.argLine}</argLine>
                         </configuration>
                     </plugin>
                 </plugins>
